# IPpy

./: .codeclimate.yml  .gitignore  .pypirc  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST  Makefile  README.md  README.rst  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini  travis_pypi_setup.py
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/PULL_REQUEST_TEMPLATE/: FAILING_TEST.md  FIX.md  IMPROVEMENT.md  NEW_FEATURE.md
.github/workflows/: deps.py  pythonpackage.yml  test.py
docs/: Makefile  conf.py  index.rst  installation.rst  ippy.rst  make.bat  usage.rst
examples/: example1.py  example2.py
ippy/: __init__.py  cli.py  ippy.py
tests/: ip_list.csv  test_ippy.py
